Add security controls, docs system, and Stage 1 run logging
- Security: strict .gitignore with data/artifact exclusions
- Agent instructions: AGENTS.md, CLAUDE.md, .claude/settings.json
- Docs system: auto-generated repo_map.md, run logs in docs/runs/
- Pre-commit: .pre-commit-config.yaml (detect-secrets, ruff, large files)
- Makefile: stage1 target triggers docs update
- README: updated with Stage 1 usage + security policy
- Stage 1 integration: run_log helper writes sanitized docs/runs entries
- Note: GitHub Actions CI workflow in separate PR due to OAuth scope

--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,67 @@
-# Data files and outputs
-stage1_dataset/data/
-stage1_dataset/reports/
-*.csv
-*.parquet
+# ===================
+# Data / artifacts (NEVER COMMIT)
+# ===================
+data/
+outputs/
+artifacts/
+**/*.parquet
+**/*.h5
+**/*.hdf5
+**/*.csv
+**/*.tsv
+**/*.xlsx
+**/*.npy
+**/*.npz
+**/*.pkl
+**/*.joblib
+**/*.pt
+**/*.pth
+**/*.ckpt
+**/*.log
+**/*.png
+**/*.pdf
 
-# Raw data sources - DO NOT COMMIT
-/home/ramanlab/Documents/cole/Data/
+# Allow tracked templates/docs
+!**/configs/*.yaml
+!**/configs/*.yml
+!docs/**
+!README.md
+!LICENSE
+!Makefile
+!.github/**
+!.claude/**
+!AGENTS.md
+!CLAUDE.md
+!CHANGELOG.md
+!CONTRIBUTING.md
 
-# Python
+# ===================
+# Secrets / env
+# ===================
+.env
+.env.*
+**/*secret*
+**/*token*
+**/*apikey*
+**/*api_key*
+**/*credentials*
+**/*.key
+**/*.pem
+
+# ===================
+# Python build
+# ===================
 __pycache__/
 *.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
+dist/
+build/
+.venv/
+.mypy_cache/
+.pytest_cache/
 
-# Virtual environments
-venv/
-ENV/
-env/
-.venv
-
+# ===================
 # IDE
+# ===================
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Outputs and artifacts
-*.png
-*.pdf
-*.log
-*.tmp
